// Copyright 2023 LiveKit, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package main

import (
	"fmt"
	"github.com/livekit/psrpc/examples/pubsub/pkg"
	"log"
	"sync"
	"time"

	getty "github.com/AlexStocks/getty/transport"
	gettypkg "github.com/livekit/psrpc/examples/pubsub/pkg/getty"
	"github.com/livekit/psrpc/examples/pubsub/protocol/protocol"
)

// GettyWebSocketClient Getty WebSocket å®¢æˆ·ç«¯
type GettyWebSocketClient struct {
	session    getty.Session
	userID     string
	userName   string
	roomID     string
	done       chan struct{}
	closeOnce  sync.Once
	mu         sync.RWMutex
}

// NewGettyWebSocketClient åˆ›å»º Getty WebSocket å®¢æˆ·ç«¯
func NewGettyWebSocketClient(addr, userID, userName, roomID string) (*GettyWebSocketClient, error) {
	// Getty è¦æ±‚åœ°å€æ ¼å¼ä¸º ws://host:port/path
	if len(addr) > 0 && addr[:5] != "ws://" && addr[:6] != "wss://" {
		addr = "ws://" + addr + "/connect"
	}

	log.Printf("ğŸ”Œ è¿æ¥åˆ° Connect-Node (Getty): %s", addr)
	log.Printf("   ç”¨æˆ·: %s (%s)", userName, userID)
	log.Printf("   æˆ¿é—´: %s", roomID)

	client := &GettyWebSocketClient{
		userID:   userID,
		userName: userName,
		roomID:   roomID,
		done:     make(chan struct{}),
	}

	// åˆ›å»º Getty WebSocket å®¢æˆ·ç«¯
	wsClient := getty.NewWSClient(
		getty.WithServerAddress(addr),
		getty.WithConnectionNumber(1),
	)

	// è®¾ç½®ä¼šè¯å›è°ƒ
	wsClient.RunEventLoop(func(session getty.Session) error {
		log.Printf("âœ… Getty Session åˆ›å»º: %s", session.Stat())

		// é…ç½® session
		session.SetName("pubsub-client")
		session.SetMaxMsgLen(1024 * 1024) // 1MB

		var readerPool pkg.Pool
		var writePool pkg.Pool

		readerPool.Init(10, 256)
		writePool.Init(10, 256)

		session.SetPkgHandler(gettypkg.NewProtoPackageHandler(&readerPool, &writePool))
		session.SetEventListener(client)
		session.SetReadTimeout(60 * time.Second)
		session.SetWriteTimeout(60 * time.Second)
		session.SetCronPeriod(30 * 1000) // 30s å¿ƒè·³
		session.SetWaitTime(60 * time.Second)

		client.mu.Lock()
		client.session = session
		client.mu.Unlock()

		return nil
	})

	// ç­‰å¾…è¿æ¥å»ºç«‹
	time.Sleep(2 * time.Second)

	if client.session == nil {
		return nil, fmt.Errorf("è¿æ¥å¤±è´¥: session æœªåˆ›å»º")
	}

	log.Printf("âœ… Getty WebSocket è¿æ¥æˆåŠŸ")
	return client, nil
}

// OnOpen Getty ä¼šè¯æ‰“å¼€å›è°ƒ
func (c *GettyWebSocketClient) OnOpen(session getty.Session) error {
	log.Printf("âœ… [Getty] Session æ‰“å¼€: %s", session.Stat())
	return nil
}

// OnError Getty é”™è¯¯å›è°ƒ
func (c *GettyWebSocketClient) OnError(session getty.Session, err error) {
	log.Printf("âŒ [Getty] Session é”™è¯¯: %v", err)
}

// OnClose Getty ä¼šè¯å…³é—­å›è°ƒ
func (c *GettyWebSocketClient) OnClose(session getty.Session) {
	log.Printf("ğŸ‘‹ [Getty] Session å…³é—­: %s", session.Stat())
	// ä½¿ç”¨ sync.Once ç¡®ä¿ channel åªå…³é—­ä¸€æ¬¡
	c.closeOnce.Do(func() {
		close(c.done)
	})
}

// OnMessage Getty æ¶ˆæ¯å›è°ƒ
func (c *GettyWebSocketClient) OnMessage(session getty.Session, pkg interface{}) {
	protoMsg, ok := pkg.(*protocol.Proto)
	if !ok {
		log.Printf("âš ï¸  æ”¶åˆ°é Proto æ¶ˆæ¯ï¼Œè·³è¿‡: %T", pkg)
		return
	}

	log.Printf("ğŸ“¥ [Client] æ”¶åˆ°æ¶ˆæ¯: op=%d, seq=%d, roomId=%s, userId=%s, bodyLen=%d",
		protoMsg.Op, protoMsg.Seq, protoMsg.Roomid, protoMsg.Userid, len(protoMsg.Body))

	c.handleMessage(protoMsg)
}

// OnCron Getty å®šæ—¶å›è°ƒï¼ˆå¿ƒè·³ï¼‰
func (c *GettyWebSocketClient) OnCron(session getty.Session) {
	if err := c.SendHeartbeat(); err != nil {
		log.Printf("âŒ å¿ƒè·³å‘é€å¤±è´¥: %v", err)
	}
}

// JoinRoom åŠ å…¥æˆ¿é—´
func (c *GettyWebSocketClient) JoinRoom() error {
	log.Printf("ğŸšª åŠ å…¥æˆ¿é—´: %s", c.roomID)

	c.mu.RLock()
	session := c.session
	c.mu.RUnlock()

	if session == nil {
		return fmt.Errorf("session æœªè¿æ¥")
	}

	// æ„é€ åŠ å…¥æˆ¿é—´çš„ Proto æ¶ˆæ¯
	protoMsg := &protocol.Proto{
		Ver:    1,
		Op:     1, // 1 = åŠ å…¥æˆ¿é—´
		Seq:    1,
		Roomid: c.roomID,
		Userid: c.userID,
		Body:   []byte(c.userName),
	}

	// å‘é€æ¶ˆæ¯
	_, _, err := session.WritePkg(protoMsg, 5*time.Second)
	if err != nil {
		return fmt.Errorf("å‘é€å¤±è´¥: %w", err)
	}

	log.Printf("âœ… åŠ å…¥æˆ¿é—´è¯·æ±‚å·²å‘é€")
	return nil
}

// SendHeartbeat å‘é€å¿ƒè·³
func (c *GettyWebSocketClient) SendHeartbeat() error {
	c.mu.RLock()
	session := c.session
	c.mu.RUnlock()

	if session == nil {
		return fmt.Errorf("session æœªè¿æ¥")
	}

	protoMsg := &protocol.Proto{
		Ver:    1,
		Op:     5, // 5 = å¿ƒè·³
		Seq:    int32(time.Now().Unix()),
		Roomid: c.roomID,
		Userid: c.userID,
	}

	_, _, err := session.WritePkg(protoMsg, 5*time.Second)
	return err
}

// handleMessage å¤„ç†æ”¶åˆ°çš„æ¶ˆæ¯
func (c *GettyWebSocketClient) handleMessage(msg *protocol.Proto) {
	switch msg.Op {
	case 2: // åŠ å…¥æˆ¿é—´å“åº” æˆ– å¹¿æ’­æ¶ˆæ¯
		// å¦‚æœæœ‰ Body å†…å®¹ï¼Œè¯´æ˜æ˜¯å¹¿æ’­æ¶ˆæ¯
		if len(msg.Body) > 0 {
			log.Printf("ğŸ“¢ æ”¶åˆ°å¹¿æ’­æ¶ˆæ¯:")
			log.Printf("   æˆ¿é—´: %s", msg.Roomid)
			log.Printf("   å†…å®¹: %s", string(msg.Body))
		} else {
		log.Printf("âœ… åŠ å…¥æˆ¿é—´æˆåŠŸ")
		log.Printf("   æˆ¿é—´: %s", msg.Roomid)
		log.Printf("   ç”¨æˆ·: %s", msg.Userid)
		}

	case 3: // æœåŠ¡å™¨æ¨é€æ¶ˆæ¯
		log.Printf("ğŸ“¨ æ”¶åˆ°æ¨é€æ¶ˆæ¯:")
		log.Printf("   æˆ¿é—´: %s", msg.Roomid)
		log.Printf("   å‘é€è€…: %s", msg.Userid)
		log.Printf("   å†…å®¹: %s", string(msg.Body))

	case 4: // å¹¿æ’­æ¶ˆæ¯
		log.Printf("ğŸ“¢ æ”¶åˆ°å¹¿æ’­æ¶ˆæ¯:")
		log.Printf("   æˆ¿é—´: %s", msg.Roomid)
		log.Printf("   å†…å®¹: %s", string(msg.Body))

	case 5: // å¿ƒè·³è¯·æ±‚ï¼ˆä¸åº”è¯¥æ”¶åˆ°ï¼‰
		log.Printf("âš ï¸  æ”¶åˆ°å¿ƒè·³è¯·æ±‚ï¼ˆæœåŠ¡å™¨ä¸åº”è¯¥å‘é€ï¼‰: op=%d", msg.Op)

	case 6: // å¿ƒè·³å“åº”
		log.Printf("ğŸ’“ æ”¶åˆ°å¿ƒè·³å“åº”: seq=%d", msg.Seq)

	default:
		log.Printf("âš ï¸  æœªçŸ¥æ¶ˆæ¯ç±»å‹: op=%d, seq=%d, body=%s", msg.Op, msg.Seq, string(msg.Body))
	}
}

// Close å…³é—­è¿æ¥
func (c *GettyWebSocketClient) Close() error {
	log.Printf("ğŸ‘‹ å…³é—­ Getty WebSocket è¿æ¥")

	c.mu.RLock()
	session := c.session
	c.mu.RUnlock()

	if session != nil {
		session.Close()
	}

	return nil
}

// Wait ç­‰å¾…è¿æ¥å…³é—­
func (c *GettyWebSocketClient) Wait() {
	<-c.done
}

// SendMessage å‘é€è‡ªå®šä¹‰æ¶ˆæ¯
func (c *GettyWebSocketClient) SendMessage(op int32, body []byte) error {
	c.mu.RLock()
	session := c.session
	c.mu.RUnlock()

	if session == nil {
		return fmt.Errorf("session æœªè¿æ¥")
	}

	protoMsg := &protocol.Proto{
		Ver:    1,
		Op:     op,
		Seq:    int32(time.Now().Unix()),
		Roomid: c.roomID,
		Userid: c.userID,
		Body:   body,
	}

	_, _, err := session.WritePkg(protoMsg, 5*time.Second)
	return err
}
