// Copyright 2023 LiveKit, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package main

import (
	"encoding/binary"
	"fmt"
	"log"
	"time"

	"github.com/gorilla/websocket"
	"github.com/livekit/psrpc/examples/pubsub/protocol/protocol"
	"google.golang.org/protobuf/proto"
)

// WebSocketClient WebSocket å®¢æˆ·ç«¯ï¼ˆè¿æ¥åˆ° Connect-Nodeï¼‰
type WebSocketClient struct {
	conn     *websocket.Conn
	userID   string
	userName string
	roomID   string
	done     chan struct{}
}

// NewWebSocketClient åˆ›å»º WebSocket å®¢æˆ·ç«¯
func NewWebSocketClient(url, userID, userName, roomID string) (*WebSocketClient, error) {
	log.Printf("ğŸ”Œ è¿æ¥åˆ° Connect-Node: %s", url)
	log.Printf("   ç”¨æˆ·: %s (%s)", userName, userID)
	log.Printf("   æˆ¿é—´: %s", roomID)

	conn, _, err := websocket.DefaultDialer.Dial(url, nil)
	if err != nil {
		return nil, fmt.Errorf("è¿æ¥å¤±è´¥: %w", err)
	}

	client := &WebSocketClient{
		conn:     conn,
		userID:   userID,
		userName: userName,
		roomID:   roomID,
		done:     make(chan struct{}),
	}

	log.Printf("âœ… WebSocket è¿æ¥æˆåŠŸ")
	return client, nil
}

// JoinRoom åŠ å…¥æˆ¿é—´
func (c *WebSocketClient) JoinRoom() error {
	log.Printf("ğŸšª åŠ å…¥æˆ¿é—´: %s", c.roomID)

	// æ„é€ åŠ å…¥æˆ¿é—´çš„ Proto æ¶ˆæ¯
	protoMsg := &protocol.Proto{
		Ver:    1,
		Op:     1, // 1 = åŠ å…¥æˆ¿é—´
		Seq:    1,
		Roomid: c.roomID,
		Userid: c.userID,
		Body:   []byte(c.userName),
	}

	// åºåˆ—åŒ–
	data, err := proto.Marshal(protoMsg)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–å¤±è´¥: %w", err)
	}

	// æ„é€ æ¶ˆæ¯åŒ…: [åŒ…é•¿åº¦(4å­—èŠ‚)] + [æ¶ˆæ¯ä½“]
	msgLen := uint32(len(data))
	packet := make([]byte, 4+len(data))
	binary.BigEndian.PutUint32(packet[0:4], msgLen)
	copy(packet[4:], data)

	// å‘é€äºŒè¿›åˆ¶æ¶ˆæ¯
	err = c.conn.WriteMessage(websocket.BinaryMessage, packet)
	if err != nil {
		return fmt.Errorf("å‘é€å¤±è´¥: %w", err)
	}

	log.Printf("âœ… åŠ å…¥æˆ¿é—´è¯·æ±‚å·²å‘é€")
	return nil
}

// Listen ç›‘å¬æœåŠ¡å™¨æ¶ˆæ¯
func (c *WebSocketClient) Listen() {
	defer close(c.done)

	log.Printf("ğŸ‘‚ å¼€å§‹ç›‘å¬æœåŠ¡å™¨æ¶ˆæ¯...")

	for {
		messageType, message, err := c.conn.ReadMessage()
		if err != nil {
			log.Printf("âŒ è¯»å–æ¶ˆæ¯å¤±è´¥: %v", err)
			return
		}

		if messageType != websocket.BinaryMessage {
			log.Printf("âš ï¸  æ”¶åˆ°éäºŒè¿›åˆ¶æ¶ˆæ¯ï¼Œè·³è¿‡")
			continue
		}

		// è§£ææ¶ˆæ¯åŒ…: [åŒ…é•¿åº¦(4å­—èŠ‚)] + [æ¶ˆæ¯ä½“]
		if len(message) < 4 {
			log.Printf("âš ï¸  æ¶ˆæ¯å¤ªçŸ­ï¼Œè·³è¿‡")
			continue
		}

		msgLen := binary.BigEndian.Uint32(message[0:4])
		if len(message) < int(4+msgLen) {
			log.Printf("âš ï¸  æ¶ˆæ¯é•¿åº¦ä¸åŒ¹é…ï¼Œè·³è¿‡")
			continue
		}

		// ååºåˆ—åŒ– Proto æ¶ˆæ¯
		protoMsg := &protocol.Proto{}
		err = proto.Unmarshal(message[4:4+msgLen], protoMsg)
		if err != nil {
			log.Printf("âŒ ååºåˆ—åŒ–å¤±è´¥: %v", err)
			continue
		}

		c.handleMessage(protoMsg)
	}
}

// handleMessage å¤„ç†æ”¶åˆ°çš„æ¶ˆæ¯
func (c *WebSocketClient) handleMessage(msg *protocol.Proto) {
	switch msg.Op {
	case 2: // åŠ å…¥æˆ¿é—´å“åº”
		log.Printf("âœ… åŠ å…¥æˆ¿é—´æˆåŠŸ")
		log.Printf("   æˆ¿é—´: %s", msg.Roomid)
		log.Printf("   ç”¨æˆ·: %s", msg.Userid)

	case 3: // æœåŠ¡å™¨æ¨é€æ¶ˆæ¯
		log.Printf("ğŸ“¨ æ”¶åˆ°æ¨é€æ¶ˆæ¯:")
		log.Printf("   æˆ¿é—´: %s", msg.Roomid)
		log.Printf("   å‘é€è€…: %s", msg.Userid)
		log.Printf("   å†…å®¹: %s", string(msg.Body))

	case 4: // å¹¿æ’­æ¶ˆæ¯
		log.Printf("ğŸ“¢ æ”¶åˆ°å¹¿æ’­æ¶ˆæ¯:")
		log.Printf("   æˆ¿é—´: %s", msg.Roomid)
		log.Printf("   å†…å®¹: %s", string(msg.Body))

	case 5: // å¿ƒè·³å“åº”
		log.Printf("ğŸ’“ å¿ƒè·³å“åº”")

	default:
		log.Printf("âš ï¸  æœªçŸ¥æ¶ˆæ¯ç±»å‹: op=%d", msg.Op)
	}
}

// SendHeartbeat å‘é€å¿ƒè·³
func (c *WebSocketClient) SendHeartbeat() error {
	protoMsg := &protocol.Proto{
		Ver:    1,
		Op:     5, // 5 = å¿ƒè·³
		Seq:    int32(time.Now().Unix()),
		Roomid: c.roomID,
		Userid: c.userID,
	}

	data, err := proto.Marshal(protoMsg)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–å¤±è´¥: %w", err)
	}

	msgLen := uint32(len(data))
	packet := make([]byte, 4+len(data))
	binary.BigEndian.PutUint32(packet[0:4], msgLen)
	copy(packet[4:], data)

	return c.conn.WriteMessage(websocket.BinaryMessage, packet)
}

// StartHeartbeat å¯åŠ¨å¿ƒè·³
func (c *WebSocketClient) StartHeartbeat(interval time.Duration) {
	ticker := time.NewTicker(interval)
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			if err := c.SendHeartbeat(); err != nil {
				log.Printf("âŒ å¿ƒè·³å‘é€å¤±è´¥: %v", err)
				return
			}
		case <-c.done:
			return
		}
	}
}

// Close å…³é—­è¿æ¥
func (c *WebSocketClient) Close() error {
	log.Printf("ğŸ‘‹ å…³é—­ WebSocket è¿æ¥")
	close(c.done)
	return c.conn.Close()
}

// Wait ç­‰å¾…è¿æ¥å…³é—­
func (c *WebSocketClient) Wait() {
	<-c.done
}

