package main

import (
	"context"
	"crypto/tls"
	"errors"
	"fmt"
	getty "github.com/AlexStocks/getty/transport"
	gxnet "github.com/AlexStocks/goext/net"
	gxsync "github.com/dubbogo/gost/sync"
	gettypkg "github.com/livekit/psrpc/examples/pubsub/pkg/getty"
	"github.com/livekit/psrpc/examples/pubsub/protocol/controller"
	proto "github.com/livekit/psrpc/examples/pubsub/protocol/protocol"
	"log"
	"net"
	"sync"
	"time"
)

const (
	maxInt = 1<<31 - 1
	r      = 0
)

var serverList []getty.Server

func InitWebsocket(server *ConnectNodeServer, addrs []string, accept int) (err error) {

	newSessionFunc := func(session getty.Session) error {
		var (
			flag1, flag2 bool
			tcpConn      *net.TCPConn
			r            int
		)

		_, flag1 = session.Conn().(*tls.Conn)
		tcpConn, flag2 = session.Conn().(*net.TCPConn)
		if !flag1 && !flag2 {
			panic(fmt.Sprintf("%s, session.conn{%#v} is not tcp/tls connection\n", session.Stat(), session.Conn()))
		}

		if server.config.GettyConfig.GettySessionParam.CompressEncoding {
			session.SetCompressType(getty.CompressZip)
		}

		if flag2 {
			if err := tcpConn.SetNoDelay(server.config.GettyConfig.GettySessionParam.TcpNoDelay); err != nil {
				log.Printf("âš ï¸  SetNoDelay å¤±è´¥: %v", err)
			}
			if err := tcpConn.SetKeepAlive(server.config.GettyConfig.GettySessionParam.TcpKeepAlive); err != nil {
				log.Printf("âš ï¸  SetKeepAlive å¤±è´¥: %v", err)
			}
			if err := tcpConn.SetReadBuffer(server.config.GettyConfig.GettySessionParam.TcpRBufSize); err != nil {
				log.Printf("âš ï¸  SetReadBuffer å¤±è´¥: %v", err)
			}
			if err := tcpConn.SetWriteBuffer(server.config.GettyConfig.GettySessionParam.TcpWBufSize); err != nil {
				log.Printf("âš ï¸  SetWriteBuffer å¤±è´¥: %v", err)
			}
		}

		// æ ¹æ® session ID é€‰æ‹© roundï¼ˆç”¨äºè´Ÿè½½å‡è¡¡ï¼‰
		// å¯ä»¥ä½¿ç”¨ session ID çš„å“ˆå¸Œå€¼
		//r = 0 // å¯ä»¥æ ¹æ® session ID è®¡ç®—å“ˆå¸Œ

		// ä» round è·å– pool
		//tr := server.round.Timer(r)
		rp := server.round.Reader(r)
		wp := server.round.Writer(r)

		// new session çš„æ—¶å€™ ï¼Œç¡®å®šå¥½ å¯¹åº” bucketï¼Œ åˆ›å»º channelï¼Œåˆå§‹åŒ– ä¸Šä¸‹æ–‡ ctx

		// åˆ›å»º ProtoPackageHandler
		protoPkgHandler := gettypkg.NewProtoPackageHandler(rp, wp)

		//server.sessionMap[&session] = &clientProtoSession{
		//	session: session,
		//}

		channel := NewChannel(server.config.Protocol.CliProto, server.config.Protocol.SvrProto)

		protoMsgHandler := newProtoMessageHandler(server, channel, protoPkgHandler)

		//protoMsgHandler := &ProtoMessageHandler{}

		//session.SetAttribute("protoPkgHandler",protoPkgHandler)
		//session.SetAttribute("channel",channel)
		//session.SetAttribute("server",server)
		// å°† handler å­˜å‚¨åˆ° session çš„ context ä¸­ï¼Œä»¥ä¾¿åœ¨å…³é—­æ—¶å½’è¿˜ buffer
		// æ³¨æ„ï¼šgetty session å¯èƒ½æ²¡æœ‰ç›´æ¥çš„ contextï¼Œæˆ‘ä»¬éœ€è¦é€šè¿‡å…¶ä»–æ–¹å¼ç®¡ç†
		// è¿™é‡Œæˆ‘ä»¬é€šè¿‡ message handler æ¥ç®¡ç†

		session.SetName(server.config.GettyConfig.GettySessionParam.SessionName)
		session.SetMaxMsgLen(server.config.GettyConfig.GettySessionParam.MaxMsgLen)
		session.SetPkgHandler(protoPkgHandler)
		session.SetEventListener(protoMsgHandler)
		session.SetReadTimeout(server.config.GettyConfig.GettySessionParam.TcpReadTimeout)
		session.SetWriteTimeout(server.config.GettyConfig.GettySessionParam.TcpWriteTimeout)
		session.SetCronPeriod((int)(server.config.GettyConfig.HeartbeatPeriod.Nanoseconds() / 1e6))
		session.SetWaitTime(server.config.GettyConfig.GettySessionParam.WaitTimeout)

		r = r + 1
		// å°† handler å­˜å‚¨åˆ° message handler ä¸­ï¼Œä»¥ä¾¿åœ¨å…³é—­æ—¶å½’è¿˜ buffer
		//protoMsgHandler.StoreHandler(session, protoPkgHandler, server)

		return nil
	}

	taskPool := gxsync.NewTaskPoolSimple(10)

	for _, port := range addrs {
		// addr = host + ":" + port
		// ä½¿ç”¨ GettyConfig.Host ä½œä¸ºç›‘å¬åœ°å€
		host := server.config.GettyConfig.Host
		if host == "" {
			host = "0.0.0.0"
		}
		addr := gxnet.HostAddress2(host, port)
		log.Printf("ğŸ”Œ å¯åŠ¨ Getty WebSocket æœåŠ¡å™¨: %s (è·¯å¾„: /connect)\n", addr)
		wsserver := getty.NewWSServer(
			getty.WithLocalAddress(addr),
			getty.WithWebsocketServerPath("/connect"),
			getty.WithServerTaskPool(taskPool),
		)
		wsserver.RunEventLoop(newSessionFunc)

		serverList = append(serverList, wsserver)
	}

	return
}

var (
	errTooManySessions = errors.New("too many sessions")
)

////////////////////////////////////////////
// message handler
////////////////////////////////////////////

////////////////////////////////////////////
// ProtoMessageHandler
////////////////////////////////////////////

type clientProtoSession struct {
	session getty.Session
	channel *Channel

	reqNum     int32
	transScene string
}

type ProtoMessageHandler struct {
	rwlock              sync.RWMutex
	server              *ConnectNodeServer
	protoPackageHandler *gettypkg.ProtoPackageHandler

	roomId   string
	clientId string
	bucket   *Bucket
	auth     bool
	channel  *Channel
}

// TODO ä¹‹å‰çš„ server_websocket æ˜¯å®¢æˆ·ç«¯å†™å…¥çš„å¾ˆå¤šæ¶ˆæ¯ï¼Œä¸€æ¬¡æ€§åˆå¹¶ç­‰æ‰€æœ‰æ¶ˆæ¯éƒ½å¤„ç†å®Œï¼Œæ‹¿åˆ° server çš„ resp ä¹‹åï¼Œ
// TODO åœ¨è¿›è¡Œåˆå¹¶è¿”å›ç»™å®¢æˆ·ç«¯ å¤„ç†åçš„ç»“æœ
// TODO è€ŒæœåŠ¡ç«¯ä¸»åŠ¨æ¨é€çš„æ¶ˆæ¯ï¼Œæ˜¯ç›´æ¥è¿›è¡Œ flush çš„

func newProtoMessageHandler(server *ConnectNodeServer, channel *Channel,
	protoPackageHandler *gettypkg.ProtoPackageHandler) *ProtoMessageHandler {

	return &ProtoMessageHandler{
		// session ç›¸å½“äº channel
		channel:             channel,
		protoPackageHandler: protoPackageHandler,
		server:              server,
		auth:                false,
	}
}

// RemoveHandler ç§»é™¤å¹¶å½’è¿˜ bufferï¼ˆå†…éƒ¨ä¸åŠ é”ï¼Œç”±è°ƒç”¨è€…ä¿è¯çº¿ç¨‹å®‰å…¨ï¼‰

func (h *ProtoMessageHandler) OnOpen(session getty.Session) error {
	log.Printf("âœ… [ProtoHandler] Session æ‰“å¼€: %s", session.Stat())

	// å¯åŠ¨ dispatchWebsocket åç¨‹å¤„ç†å®¢æˆ·ç«¯æ¶ˆæ¯
	go h.dispatchWebsocket(session)

	return nil
}

func (h *ProtoMessageHandler) dispatchWebsocket(session getty.Session) {
	var (
		err    error
		p      *proto.Proto
		finish bool
	)

	log.Printf("ğŸš€ [ProtoHandler] dispatchWebsocket å¯åŠ¨")

	for {
		// 1. ç­‰å¾…ä¿¡å·ï¼ˆé˜»å¡ç›´åˆ°æœ‰æ–°æ¶ˆæ¯æˆ–å…³é—­ï¼‰
		p = h.channel.Ready()

		switch p {
		case proto.ProtoFinish:
			log.Printf("ğŸ‘‹ [ProtoHandler] dispatchWebsocket æ”¶åˆ°ç»“æŸä¿¡å·")
			finish = true
			goto close

		case proto.ProtoReady:
			for {
				// Get() è·å– rp ä½ç½®çš„ Proto æŒ‡é’ˆ
				p, err = h.channel.ClientReqQueue.Get()
				if err != nil {
					// Ring Buffer ç©ºäº†ï¼Œè·³å‡ºå†…å±‚å¾ªç¯ï¼Œç»§ç»­ç­‰å¾…ä¿¡å·
					break
				}

				// 3. å¤„ç†æ¶ˆæ¯ï¼ˆæ ¹æ® op è·¯ç”±åˆ°ä¸åŒçš„ handlerï¼‰
				if err = h.processClientRequest(session, p); err != nil {
					log.Printf("âŒ [ProtoHandler] å¤„ç†æ¶ˆæ¯å¤±è´¥: op=%d, seq=%d, err=%v", p.Op, p.Seq, err)
				}

				// 4. GetAdv() æ¨è¿› rp æŒ‡é’ˆï¼ˆâš ï¸ é‡è¦ï¼šæ­¤æ—¶ ReadBuffer å¯ä»¥å¤ç”¨äº†ï¼‰
				h.channel.ClientReqQueue.GetAdv()

				log.Printf("âœ… [ProtoHandler] æ¶ˆæ¯å¤„ç†å®Œæˆ: op=%d, seq=%d, rp++", p.Op, p.Seq)
			}
		
		default:
			// æœåŠ¡ç«¯æ¨é€çš„æ¶ˆæ¯ï¼ˆé€šè¿‡ Broadcast/BroadcastRoom æ¨é€ï¼‰
			log.Printf("ğŸ“¤ [ProtoHandler] æ”¶åˆ°æœåŠ¡ç«¯æ¨é€æ¶ˆæ¯: op=%d, seq=%d, roomId=%s, bodyLen=%d", 
				p.Op, p.Seq, p.Roomid, len(p.Body))
			
			// ç›´æ¥å‘é€ç»™å®¢æˆ·ç«¯
			_, _, err := session.WritePkg(p, 0)
			if err != nil {
				log.Printf("âŒ [ProtoHandler] å‘é€æœåŠ¡ç«¯æ¨é€æ¶ˆæ¯å¤±è´¥: %v", err)
			} else {
				log.Printf("âœ… [ProtoHandler] æœåŠ¡ç«¯æ¨é€æ¶ˆæ¯å·²å‘é€ç»™å®¢æˆ·ç«¯")
			}
		}

	}

close:
	if finish {
		log.Printf("ğŸ›‘ [ProtoHandler] dispatchWebsocket æ­£å¸¸é€€å‡º")
		session.Close()
		h.protoPackageHandler.Close()
	}
}

// processClientRequest å¤„ç†å®¢æˆ·ç«¯è¯·æ±‚
func (h *ProtoMessageHandler) processClientRequest(session getty.Session, p *proto.Proto) error {
	log.Printf("ğŸ“¨ [ProtoHandler] å¤„ç†å®¢æˆ·ç«¯æ¶ˆæ¯: op=%d, seq=%d, roomId=%s, userId=%s, bodyLen=%d",
		p.Op, p.Seq, p.Roomid, p.Userid, len(p.Body))

	// TODO: æ ¹æ® op è·¯ç”±åˆ°ä¸åŒçš„ä¸šåŠ¡ handler
	switch p.Op {
	case 1: // åŠ å…¥æˆ¿é—´
		log.Printf("ğŸ  [ProtoHandler] åŠ å…¥æˆ¿é—´: roomId=%s, userId=%s", p.Roomid, p.Userid)
		// è¿™é‡Œå¯ä»¥è°ƒç”¨å…·ä½“çš„ä¸šåŠ¡é€»è¾‘

		joinRoomRequest := controller.JoinRoomRequest{
			RoomId: p.Roomid,
			UserId: p.Userid,
		}

		log.Printf("ğŸ”„ [ProtoHandler] è°ƒç”¨ Controller.JoinRoom...")
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		defer cancel()
		
		_, err := h.server.controllerClient.JoinRoom(ctx, &joinRoomRequest)
		if err != nil {
			log.Printf("âŒ [ProtoHandler] join room error: %s", err.Error())
			return err
		}
		log.Printf("âœ… [ProtoHandler] JoinRoom è°ƒç”¨æˆåŠŸ")

		// åŠ å…¥æˆ¿é—´æˆåŠŸåï¼Œè®¢é˜…æ¶ˆæ¯æ¨é€æ“ä½œç 
		// Op=2: OP_SEND_MSG (æœåŠ¡ç«¯æ¨é€çš„æ¶ˆæ¯)
		h.channel.Watch(2)
		log.Printf("âœ… [ProtoHandler] å·²è®¢é˜…æ¶ˆæ¯æ¨é€: op=2")

		// å¤„ç†å®Œåï¼Œå¦‚æœéœ€è¦å›å¤å®¢æˆ·ç«¯
		// å‡†å¤‡å“åº”æ¶ˆæ¯
		resp := &proto.Proto{
			Ver:    p.Ver,
			Op:     p.Op + 1, // å›å¤ op
			Seq:    p.Seq,
			Roomid: p.Roomid,
			Userid: p.Userid,
			Body:   []byte("join room success"),
		}

		// å‘é€å“åº”ï¼ˆé€šè¿‡ getty çš„ WritePkgï¼‰
		log.Printf("ğŸ“¤ [ProtoHandler] å‘é€åŠ å…¥æˆ¿é—´å“åº”...")
		_, _, err = session.WritePkg(resp, 0)
		if err != nil {
			log.Printf("âŒ [ProtoHandler] å‘é€å“åº”å¤±è´¥: %v", err)
			return err
		}
		log.Printf("âœ… [ProtoHandler] åŠ å…¥æˆ¿é—´å“åº”å·²å‘é€")

	case 5: // å¿ƒè·³åŒ…
		log.Printf("ğŸ’“ [ProtoHandler] æ”¶åˆ°å¿ƒè·³: roomId=%s, userId=%s", p.Roomid, p.Userid)
		// å¿ƒè·³åŒ…ä¸éœ€è¦ç‰¹æ®Šå¤„ç†ï¼ŒGetty ä¼šè‡ªåŠ¨æ›´æ–° session æ´»è·ƒæ—¶é—´
		// å¯ä»¥é€‰æ‹©æ€§åœ°å›å¤å¿ƒè·³ç¡®è®¤
		resp := &proto.Proto{
			Ver:    p.Ver,
			Op:     6, // å¿ƒè·³å“åº”
			Seq:    p.Seq,
			Roomid: p.Roomid,
			Userid: p.Userid,
			Body:   nil,
		}
		_, _, err := session.WritePkg(resp, 0)
		if err != nil {
			log.Printf("âš ï¸  [ProtoHandler] å‘é€å¿ƒè·³å“åº”å¤±è´¥: %v", err)
		}
		return nil

	default:
		log.Printf("âš ï¸  [ProtoHandler] æœªçŸ¥ op: %d", p.Op)
		return nil
	}

	return nil
}

func (h *ProtoMessageHandler) OnError(session getty.Session, err error) {
	log.Printf("âŒ [ProtoHandler] Session é”™è¯¯: %s, err=%v", session.Stat(), err)

	// é€šçŸ¥ dispatchWebsocket é€€å‡º
	h.channel.Close()

	// å½’è¿˜ ReadBuffer
	h.protoPackageHandler.Close()
}

func (h *ProtoMessageHandler) OnClose(session getty.Session) {
	log.Printf("ğŸ‘‹ [ProtoHandler] Session å…³é—­: %s", session.Stat())

	// é€šçŸ¥ dispatchWebsocket é€€å‡º
	h.channel.Close()

	// å½’è¿˜ ReadBuffer
	h.protoPackageHandler.Close()
}

func (h *ProtoMessageHandler) authWebsocket(p *proto.Proto, session getty.Session) error {
	// ä½¿ç”¨ op=1ï¼ˆåŠ å…¥æˆ¿é—´ï¼‰ä½œä¸ºé‰´æƒæ“ä½œ
	// æˆ–è€… op=0ï¼ˆå¦‚æœæœ‰ä¸“é—¨çš„è®¤è¯æ“ä½œç ï¼‰
	if p.Roomid != "" && p.Userid != "" && (p.Op == proto.OpAuth || p.Op == 1) {
		// redis check login session (è¿™é‡Œå¯ä»¥æ·»åŠ å®é™…çš„è®¤è¯é€»è¾‘)

		h.roomId = p.Roomid
		h.clientId = p.Userid

		h.bucket = h.server.Bucket(p.Userid)

		//connectNodeServer := session.GetAttribute("server").(*ConnectNodeServer)
		h.bucket.Put(p.Roomid, h.channel)

		h.auth = true
		log.Printf("âœ… [ProtoHandler] é‰´æƒæˆåŠŸ: roomId=%s, userId=%s", p.Roomid, p.Userid)
		return nil
	}

	return fmt.Errorf("auth failed: op=%d, roomId=%s, userId=%s", p.Op, p.Roomid, p.Userid)
}

func (h *ProtoMessageHandler) OnMessage(session getty.Session, pkg any) {
	p, ok := pkg.(*proto.Proto)
	if !ok {
		log.Printf("âŒ [ProtoHandler] éæ³•åŒ…ç±»å‹: %#v", pkg)
		return
	}

	// é‰´æƒæ£€æŸ¥
	if !h.auth {
		err := h.authWebsocket(p, session)
		if err != nil {
			log.Printf("âŒ [ProtoHandler] é‰´æƒå¤±è´¥: %v", err)
			return
		}
	}

	// å°†æ¶ˆæ¯æ”¾å…¥ CliProto Ring Buffer
	// 1. Set() è·å– wp ä½ç½®çš„ Proto æŒ‡é’ˆ
	cliproto, err := h.channel.ClientReqQueue.Set()
	if err != nil {
		// Ring Buffer æ»¡äº†ï¼Œä¸¢å¼ƒæ¶ˆæ¯æˆ–ç­‰å¾…
		log.Printf("âš ï¸  [ProtoHandler] ClientReqQueue å·²æ»¡ï¼Œä¸¢å¼ƒæ¶ˆæ¯: op=%d, seq=%d", p.Op, p.Seq)
		return
	}

	// 2. æ‹·è´æ•°æ®åˆ° Ring Bufferï¼ˆæµ…æ‹·è´ï¼ŒBody ä»ç„¶å¼•ç”¨ ReadBufferï¼‰
	*cliproto = *p

	// 3. SetAdv() æ¨è¿› wp æŒ‡é’ˆ
	h.channel.ClientReqQueue.SetAdv()

	// 4. Signal() é€šçŸ¥ dispatchWebsocket æœ‰æ–°æ•°æ®
	h.channel.Signal()

	log.Printf("âœ… [ProtoHandler] æ¶ˆæ¯å…¥é˜Ÿ: op=%d, seq=%d, roomId=%s, userId=%s, bodyLen=%d",
		p.Op, p.Seq, p.Roomid, p.Userid, len(p.Body))
}

func writeResp(session getty.Session, resp *proto.Proto) {
	if _, _, err := session.WritePkg(resp, 5*time.Second); err != nil {
		log.Printf("send failed: %v", err)
	}
}

func (h *ProtoMessageHandler) OnCron(session getty.Session) {
	activeTime := session.GetActive()
	// ä½¿ç”¨é…ç½®çš„ session_timeoutï¼ˆé»˜è®¤ 60 ç§’ï¼‰
	timeout := h.server.config.GettyConfig.SessionTimeout
	if timeout == 0 {
		timeout = 60 * time.Second
	}

	if time.Since(activeTime) > timeout {
		log.Printf("â° [ProtoHandler] Session è¶…æ—¶ï¼Œå…³é—­è¿æ¥: %s (è¶…æ—¶: %v)", session.RemoteAddr(), timeout)
		session.Close()
	}
}
