// Copyright 2023 LiveKit, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package main

import (
	"context"
	"fmt"
	"github.com/livekit/psrpc/examples/pubsub/protocol/controller"
	"github.com/livekit/psrpc/examples/pubsub/protocol/push"
	"log"
	"net"
	"os"
	"os/signal"
	"strings"
	"syscall"
	"time"

	"github.com/redis/go-redis/v9"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	"github.com/livekit/psrpc/examples/pubsub/pkg/config"
	"github.com/livekit/psrpc/examples/pubsub/pkg/database"
	"github.com/livekit/psrpc/examples/pubsub/pkg/etcd"
	"github.com/livekit/psrpc/examples/pubsub/pkg/metrics"
	"github.com/livekit/psrpc/examples/pubsub/pkg/tracing"
)

func main() {
	// åŠ è½½é…ç½®
	cfg := config.LoadConfig()

	// å‘½ä»¤è¡Œå‚æ•°å¯ä»¥è¦†ç›–é…ç½®
	if len(os.Args) > 1 {
		cfg.Server.ID = os.Args[1]
	}
	if len(os.Args) > 2 {
		fmt.Sscanf(os.Args[2], "%d", &cfg.Server.Port)
	}

	log.Println(strings.Repeat("=", 80))
	log.Printf("ğŸš€ å¯åŠ¨ Controller Manager: %s (ç«¯å£: %d)\n", cfg.Server.ID, cfg.Server.Port)
	log.Println(strings.Repeat("=", 80))
	log.Println()

	// 1ï¸âƒ£ åˆå§‹åŒ– OpenTelemetry
	log.Println("ğŸ”­ åˆå§‹åŒ– OpenTelemetry...")
	shutdown, err := tracing.InitTracer(cfg.Server.ID, tracing.ServiceNameController)
	if err != nil {
		log.Printf("âš ï¸  OpenTelemetry åˆå§‹åŒ–å¤±è´¥: %v\n", err)
	} else {
		defer func() {
			if err := shutdown(context.Background()); err != nil {
				log.Printf("âš ï¸  å…³é—­ Tracer å¤±è´¥: %v\n", err)
			}
		}()
		log.Println("âœ… OpenTelemetry åˆå§‹åŒ–æˆåŠŸ")
	}
	log.Println()

	// 2ï¸âƒ£ è¿æ¥ MySQL æ•°æ®åº“
	log.Println("ğŸ—„ï¸  è¿æ¥åˆ° MySQL...")
	dbConfig := &database.Config{
		Host:     cfg.Database.Host,
		Port:     cfg.Database.Port,
		User:     cfg.Database.User,
		Password: cfg.Database.Password,
		DBName:   cfg.Database.DBName,
		Charset:  cfg.Database.Charset,
	}

	// è¿æ¥æ•°æ®åº“
	db, err := database.NewDatabase(dbConfig)
	if err != nil {
		log.Fatalf("âŒ è¿æ¥æ•°æ®åº“å¤±è´¥: %v\n", err)
	}
	log.Println("âœ… MySQL è¿æ¥æˆåŠŸ")

	// 3ï¸âƒ£ è¿æ¥ Redisï¼ˆç”¨äºç¼“å­˜ï¼‰
	log.Println("ğŸ“¡ è¿æ¥åˆ° Redis...")
	redisClient := redis.NewClient(&redis.Options{
		Addr:     cfg.Redis.Addr,
		Password: cfg.Redis.Password,
		DB:       cfg.Redis.DB,
	})

	ctx := context.Background()
	if err := redisClient.Ping(ctx).Err(); err != nil {
		log.Printf("âš ï¸  Redis è¿æ¥å¤±è´¥ï¼ˆå°†è·³è¿‡ç¼“å­˜ï¼‰: %v\n", err)
		redisClient = nil
	} else {
		log.Println("âœ… Redis è¿æ¥æˆåŠŸ")
	}
	log.Println()

	// 4ï¸âƒ£ åˆ›å»º Metrics Collector
	log.Println("ğŸ“Š åˆ›å»º Metrics Collector...")
	metricsCollector, err := metrics.NewMetricsCollector(cfg.Server.ID, tracing.ServiceNameController)

	if err != nil {
		log.Printf("âš ï¸  Metrics Collector åˆ›å»ºå¤±è´¥: %v\n", err)
	}
	log.Println("âœ… Metrics Collector åˆ›å»ºæˆåŠŸ")
	log.Println()

	// 5ï¸âƒ£ æ³¨å†ŒæœåŠ¡åˆ° ETCD
	log.Println("ğŸ“ æ³¨å†ŒæœåŠ¡åˆ° ETCD...")
	
	// æ„å»ºæœåŠ¡æ³¨å†Œåœ°å€
	nodeAddr := os.Getenv("NODE_ADDR")
	if nodeAddr == "" {
		nodeAddr = "localhost"
	}
	serviceAddr := fmt.Sprintf("%s:%d", nodeAddr, cfg.Server.Port)
	
	go etcd.RegisterEndPointToEtcd(ctx, serviceAddr, "/services/controller-manager", cfg.ETCD.Endpoints)
	
	// ç­‰å¾…ä¸€å°æ®µæ—¶é—´ç¡®ä¿æ³¨å†Œå®Œæˆ
	time.Sleep(1 * time.Second)
	log.Printf("âœ… æœåŠ¡å·²æ³¨å†Œåˆ° ETCD: %s", serviceAddr)
	log.Println()

	// 6ï¸âƒ£ åˆ›å»º Push-Manager å®¢æˆ·ç«¯
	log.Println("ğŸ”— åˆ›å»º Push-Manager å®¢æˆ·ç«¯...")
	pushClient := newPushClient(cfg.RpcConfig, cfg.ETCD.Endpoints)
	log.Println("âœ… Push-Manager å®¢æˆ·ç«¯åˆ›å»ºæˆåŠŸ")
	log.Println()

	// 7ï¸âƒ£ åˆ›å»º Repository å’Œ Controller Server
	log.Println("ğŸ—ï¸  åˆ›å»º Controller Server...")
	repo := database.NewRepository(db)
	controllerServer := NewControllerServer(cfg, repo, redisClient, &pushClient, metricsCollector)
	log.Println("âœ… Controller Server åˆ›å»ºæˆåŠŸ")
	log.Println()

	// 8ï¸âƒ£ åˆ›å»º gRPC Serverï¼ˆå¸¦ OpenTelemetryï¼‰
	log.Println("ğŸ”§ åˆ›å»º gRPC Server...")
	grpcOpts := tracing.GetGRPCServerOptions()
	grpcServer := grpc.NewServer(grpcOpts...)

	controller.RegisterControllerServiceServer(grpcServer, controllerServer)

	// 9ï¸âƒ£ å¯åŠ¨ gRPC Server
	listen, err := net.Listen("tcp", fmt.Sprintf(":%d", cfg.Server.Port))
	if err != nil {
		log.Fatalf("âŒ ç›‘å¬å¤±è´¥: %v\n", err)
	}

	log.Println(strings.Repeat("=", 80))
	log.Println("âœ… Controller Manager è¿è¡Œä¸­")
	log.Println(strings.Repeat("=", 80))
	log.Println()
	log.Println("ğŸ“‹ æœåŠ¡ä¿¡æ¯:")
	log.Printf("  - Controller ID: %s\n", cfg.Server.ID)
	log.Printf("  - gRPC ç«¯å£: %d\n", cfg.Server.Port)
	log.Printf("  - MySQL: %s:%d/%s\n", cfg.Database.Host, cfg.Database.Port, cfg.Database.DBName)
	log.Printf("  - Redis: %s (ç¼“å­˜)\n", cfg.Redis.Addr)
	log.Printf("  - ETCD: %v\n", cfg.ETCD.Endpoints)
	log.Printf("  - OpenTelemetry: enabled\n")
	log.Printf("  - Metrics: enabled\n")
	log.Println()
	log.Println("âš™ï¸  æˆ¿é—´é…ç½®:")
	log.Printf("  - é»˜è®¤æœ€å¤§ç”¨æˆ·æ•°: %d\n", cfg.Room.DefaultMaxUsers)
	log.Printf("  - ç¼“å­˜ TTL: %v\n", cfg.Room.CacheTTL)
	log.Println()
	log.Println("ğŸ”Œ gRPC æ–¹æ³•:")
	log.Println("  - NotifyUserOnline: Connect-Node é€šçŸ¥ç”¨æˆ·ä¸Šçº¿")
	log.Println("  - NotifyUserOffline: Connect-Node é€šçŸ¥ç”¨æˆ·ä¸‹çº¿")
	log.Println("  - JoinRoom: ç”¨æˆ·åŠ å…¥æˆ¿é—´")
	log.Println("  - LeaveRoom: ç”¨æˆ·ç¦»å¼€æˆ¿é—´")
	log.Println("  - GetRoomInfo: è·å–æˆ¿é—´ä¿¡æ¯")
	log.Println("  - GetRoomStats: è·å–æˆ¿é—´ç»Ÿè®¡")
	log.Println("  - SelectConnectNode: é€‰æ‹©èŠ‚ç‚¹ï¼ˆè´Ÿè½½å‡è¡¡ï¼‰")
	log.Println()
	log.Println("ğŸ’¡ ä½¿ç”¨ç¤ºä¾‹:")
	log.Println("  grpcurl -plaintext localhost:50051 list")
	log.Println("  grpcurl -plaintext localhost:50051 pubsub.ControllerService/GetRoomStats")
	log.Println()
	log.Println("ğŸšª æŒ‰ Ctrl+C é€€å‡º")
	log.Println(strings.Repeat("=", 80))
	log.Println()

	// å¯åŠ¨ gRPC Server
	go func() {
		if err := grpcServer.Serve(listen); err != nil {
			log.Fatalf("âŒ gRPC æœåŠ¡å¯åŠ¨å¤±è´¥: %v\n", err)
		}
	}()

	// ç­‰å¾…é€€å‡ºä¿¡å·
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)
	<-sigChan

	// ä¼˜é›…å…³é—­
	log.Println("\nğŸ›‘ æ­£åœ¨å…³é—­æœåŠ¡...")
	grpcServer.GracefulStop()
	log.Println("ğŸ‘‹ æœåŠ¡å·²å…³é—­")
}

func newPushClient(c *config.RpcConfig, etcdEndpoints []string) (controllerClient push.CometClient) {

	log.Printf("ğŸ” è¿æ¥ ETCD: %v", etcdEndpoints)
	resolverBuilder, err := etcd.GetETCDResolverBuilder(etcdEndpoints)
	if err != nil {
		log.Printf("âŒ è·å– ETCD Resolver å¤±è´¥: %v", err)
		panic(err)
	}

	log.Printf("ğŸ”— é€šè¿‡ ETCD è¿æ¥ Push-Managerï¼ˆéé˜»å¡æ¨¡å¼ï¼‰...")

	// etcd v3 naming resolver: ä½¿ç”¨ resolver çš„ scheme
	target := fmt.Sprintf("%s:///services/push-manager", resolverBuilder.Scheme())
	log.Printf("   ç›®æ ‡: %s", target)

	// ä¸ä½¿ç”¨ WithBlockï¼Œå…è®¸å¼‚æ­¥è¿æ¥
	conn, err := grpc.Dial(target,
		grpc.WithResolvers(resolverBuilder),
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)

	if err != nil {
		log.Printf("âŒ åˆ›å»º gRPC è¿æ¥å¤±è´¥: %v", err)
		panic(err)
	}

	log.Printf("âœ… Push-Manager å®¢æˆ·ç«¯å·²åˆ›å»ºï¼ˆå°†åœ¨åå°å»ºç«‹è¿æ¥ï¼‰")

	return push.NewCometClient(conn)

}

// printStats å®šæœŸæ‰“å°ç»Ÿè®¡ä¿¡æ¯
